day-6/ingress-pre.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corrency-app
  labels:
    app: test-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: corrency-app
        image: techwithprerit/k8s-hindi-app1:1.2-major 
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  selector:
    app: test-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
