day-6/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cloudlab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-class
  rules:
  - host: dev.cloudlabexperts.site
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: test
            port: 
              number: 8080
